--- a/index.html
+++ b/index.html
@@ -68,25 +68,45 @@
 
         var ContactForm = React.createClass({
             propTypes: {
-                contact: React.PropTypes.object.isRequired,
+                value: React.PropTypes.object.isRequired,
+                onChange: React.PropTypes.func.isRequired,
             },
 
             render: function() {
+                var contact = this.props.value;
+                var onChange = this.props.onChange;
                 return (
-                    React.createElement('form', {className: 'ContactForm'},
+                    React.createElement('form', {
+                            className: 'ContactForm',
+                        },
                         React.createElement('input', {
                             type: 'text',
                             placeholder: 'name (required)',
-                            value: this.props.contact.name,
+                            value: this.props.value.name,
+                            onChange: function(e) {
+                                onChange(Object.assign({}, contact, {
+                                    name: e.target.value
+                                }))
+                            },
                         }),
                         React.createElement('input', {
                             type: 'text',
                             placeholder: 'E-mail',
-                            value: this.props.contact.email,
+                            value: this.props.value.email,
+                            onChange: function(e) {
+                                onChange(Object.assign({}, contact, {
+                                  email: e.target.value
+                                }))
+                            },
                         }),
                         React.createElement('textarea', {
                             placeholder: 'Description',
-                            value: this.props.contact.description,
+                            value: this.props.value.description,
+                            onChange: function(e) {
+                                onChange(Object.assign({}, contact, {
+                                  description: e.target.value
+                                }))
+                            },
                         }),
                         React.createElement('button', {
                             type: 'submit'
@@ -122,7 +142,10 @@
                             className: 'ContactView-list'
                         }, contactItemElements),
                         React.createElement(ContactForm, {
-                            contact: newContact
+                            value: this.props.newContact,
+                            onChange: function(contact) {
+                                console.log(contact);
+                            },
                         })
                     )
                 )
